// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SpotifyPlaylist Component > matches the snapshot 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col justify-between h-full p-4  rounded-xl bg-gray-200 dark:bg-gray-800"
  >
    <div
      class="mb-4"
    >
      <h2
        class="text-xl font-bold mb-2 text-gray-700 dark:text-gray-300"
      >
        My Favorite Playlist
      </h2>
      <p
        class="text-gray-700 dark:text-gray-300"
      >
        Enjoy my personal selection of songs in this playlist. Listen to it and let yourself be carried away by the rhythm!
      </p>
    </div>
    <div
      class="mt-auto"
    >
      <iframe
        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
        class="rounded-xl"
        data-testid="spotify-playlist-iframe"
        height="379px"
        loading="lazy"
        src="https://open.spotify.com/embed/playlist/2Z8vIZcBXeeCfcmkffrTlR?utm_source=generator"
        width="100%"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`SpotifyPlaylist Component > renders correctly in desktop view 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col justify-between h-full p-4  rounded-xl bg-gray-200 dark:bg-gray-800"
  >
    <div
      class="mb-4"
    >
      <h2
        class="text-xl font-bold mb-2 text-gray-700 dark:text-gray-300"
      >
        My Favorite Playlist
      </h2>
      <p
        class="text-gray-700 dark:text-gray-300"
      >
        Enjoy my personal selection of songs in this playlist. Listen to it and let yourself be carried away by the rhythm!
      </p>
    </div>
    <div
      class="mt-auto"
    >
      <iframe
        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
        class="rounded-xl"
        data-testid="spotify-playlist-iframe"
        height="379px"
        loading="lazy"
        src="https://open.spotify.com/embed/playlist/2Z8vIZcBXeeCfcmkffrTlR?utm_source=generator"
        width="100%"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`SpotifyPlaylist Component > renders correctly in mobile view 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col justify-between h-full p-4  rounded-xl bg-gray-200 dark:bg-gray-800"
  >
    <div
      class="mb-4"
    >
      <h2
        class="text-xl font-bold mb-2 text-gray-700 dark:text-gray-300"
      >
        My Favorite Playlist
      </h2>
      <p
        class="text-gray-700 dark:text-gray-300"
      >
        Enjoy my personal selection of songs in this playlist. Listen to it and let yourself be carried away by the rhythm!
      </p>
    </div>
    <div
      class="mt-auto"
    >
      <iframe
        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
        class="rounded-xl"
        data-testid="spotify-playlist-iframe"
        height="152px"
        loading="lazy"
        src="https://open.spotify.com/embed/playlist/2Z8vIZcBXeeCfcmkffrTlR?utm_source=generator"
        width="100%"
      />
    </div>
  </div>
</DocumentFragment>
`;
